// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements/Tooltip Default smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div data-v-9f1c3168
       class="flex justify-center tooltip-wrapper tooltip-primary flex justify-center"
  >
    <div data-v-5784ed69
         data-v-9f1c3168
         class="inline-block"
         style="border: 12px solid transparent; margin: -12px; --c81fc0a4: 9999;"
    >
      <div data-v-5784ed69>
        <button data-v-e3f15263
                data-v-5784ed69-s
                type="button"
                class="btn text-xs sm:text-sm transition-all btn-primary shadow-none normal-case border-solid active:btn-primary"
        >
          <span data-v-e3f15263
                class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
          >
          </span>
          <span data-v-e3f15263
                class
          >
            Hover me
          </span>
        </button>
      </div>
      <div data-v-5784ed69
           class="popper"
           style="display: none;"
      >
        <div data-v-9f1c3168
             data-v-5784ed69-s
             class="tooltip-content !bg-primary !text-white !border-primary/20"
        >
          This is a helpful tooltip message
        </div>
        <div data-v-20b7fd4a
             data-v-5784ed69
             id="arrow"
             data-popper-arrow
        >
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Elements/Tooltip LongText smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div data-v-9f1c3168
       class="flex justify-center tooltip-wrapper tooltip-primary flex justify-center"
  >
    <div data-v-5784ed69
         data-v-9f1c3168
         class="inline-block"
         style="border: 12px solid transparent; margin: -12px; --c81fc0a4: 9999;"
    >
      <div data-v-5784ed69>
        <button data-v-e3f15263
                data-v-5784ed69-s
                type="button"
                class="btn text-xs sm:text-sm transition-all btn-success shadow-none normal-case border-solid active:btn-success"
        >
          <span data-v-e3f15263
                class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
          >
          </span>
          <span data-v-e3f15263
                class
          >
            Long tooltip text
          </span>
        </button>
      </div>
      <div data-v-5784ed69
           class="popper"
           style="display: none;"
      >
        <div data-v-9f1c3168
             data-v-5784ed69-s
             class="tooltip-content !bg-primary !text-white !border-primary/20"
        >
          This is a much longer tooltip message that demonstrates how the tooltip handles longer text content. It will wrap appropriately and maintain good readability.
        </div>
        <div data-v-20b7fd4a
             data-v-5784ed69
             id="arrow"
             data-popper-arrow
        >
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Elements/Tooltip WithDelay smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div data-v-9f1c3168
       class="flex justify-center tooltip-wrapper tooltip-primary flex justify-center"
  >
    <div data-v-5784ed69
         data-v-9f1c3168
         class="inline-block"
         style="border: 12px solid transparent; margin: -12px; --c81fc0a4: 9999;"
    >
      <div data-v-5784ed69>
        <button data-v-e3f15263
                data-v-5784ed69-s
                type="button"
                class="btn text-xs sm:text-sm transition-all btn-info shadow-none normal-case border-solid active:btn-info"
        >
          <span data-v-e3f15263
                class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
          >
          </span>
          <span data-v-e3f15263
                class
          >
            Hover for 2 seconds
          </span>
        </button>
      </div>
      <div data-v-5784ed69
           class="popper"
           style="display: none;"
      >
        <div data-v-9f1c3168
             data-v-5784ed69-s
             class="tooltip-content !bg-primary !text-white !border-primary/20"
        >
          This tooltip appears after 2 seconds of hovering
        </div>
        <div data-v-20b7fd4a
             data-v-5784ed69
             id="arrow"
             data-popper-arrow
        >
        </div>
      </div>
    </div>
  </div>
</div>
`;
